# xc

./: Cargo.toml  LICENSE  README.md
freebsd/: Cargo.toml
freebsd/src/: event.rs  lib.rs  procdesc.rs
freebsd/src/fs/: devfs.rs  mod.rs  zfs.rs
freebsd/src/net/: ifconfig.rs  mod.rs  pf.rs
ipc/: Cargo.toml
ipc-macro/: Cargo.toml
ipc-macro/src/: lib.rs
ipc/src/: lib.rs  util.rs
ipc/src/packet/: mod.rs
ipc/src/packet/codec/: json.rs  mod.rs
ipc/src/proto/: mod.rs
ipc/src/service/: mod.rs
ipc/src/transport/: mod.rs  tokio_io.rs
ipcidr/: Cargo.toml
ipcidr/src/: lib.rs
oci_util/: Cargo.toml
oci_util/src/: digest.rs  image_reference.rs  layer.rs  lib.rs  models.rs  util.rs
oci_util/src/distribution/: client.rs  mod.rs
ocitar/: Cargo.toml  README.md
ocitar/src/: main.rs  tar.rs  util.rs
ocitar/test-materials/: base.tar  base.tar.zst  stage-before.tar  stage-expected.tar
ocitar/test-materials/stage-before/base/be_empty/: should_not_be_here
ocitar/test-materials/stage-expected/base/: testfile
pty_process/: Cargo.toml
pty_process/src/: buffer.rs  kqueue_forwarder.rs  lib.rs
varutil/: Cargo.toml
varutil/src/: lib.rs  parse.rs  string_interpolation.rs
xc/: Cargo.toml
xc-bin/: Cargo.toml
xc-bin/src/: attach.rs  channel.rs  error.rs  image.rs  main.rs  network.rs  redirect.rs  run.rs  volume.rs
xc-bin/src/format/: dataset.rs  mod.rs
xc-bin/src/image/: mod.rs  patch.rs
xc-bin/src/jailfile/: jailfile.pest  mod.rs  parse.rs  statefile.rs
xc-bin/src/jailfile/directives/: add_env.rs  copy.rs  from.rs  mod.rs  run.rs  volume.rs
xc-build/: Cargo.toml
xc-build/src/: main.rs
xc-build/src/format/: env_pair.rs  mod.rs
xc-build/src/jailfile/: jailfile.pest  mod.rs  statefile.rs
xc-build/src/jailfile/directives/: add_env.rs  from.rs  mod.rs  run.rs  volume.rs
xc/src/: config.rs  elf.rs  lib.rs  util.rs
xc/src/container/: effect.rs  error.rs  mod.rs  process.rs  request.rs  runner.rs  running.rs
xc/src/container/runner/: control_stream.rs  mod.rs  process_stat.rs
xc/src/format/: devfs_rules.rs  docker_compat.rs  mod.rs
xc/src/image_store/: mod.rs  sqlite.rs
xc/src/models/: cmd_arg.rs  exec.rs  jail_image.rs  jail_image_legacy.rs  mod.rs  network.rs
xc/src/res/: devfs.rs  mod.rs  network.rs
xc/src/tasks/: mod.rs
xcd/: Cargo.toml
xcd/src/: config_manager.rs  context.rs  database.rs  dataset.rs  devfs_store.rs  image.rs  instantiate.rs  ipc.rs  lib.rs  network_manager.rs  port.rs  site.rs  task.rs  util.rs
xcd/src/auth/: mod.rs
xcd/src/config/: config_manager.rs  inventory.rs  mod.rs
xcd/src/context/: instantiate.rs  mod.rs
xcd/src/image/: mod.rs  pull.rs  push.rs
xcd/src/network/: mod.rs
xcd/src/registry/: mod.rs
xcd/src/resources/: mod.rs  network.rs
xcd/src/resources/volume/: mod.rs
xcd/src/resources/volume/drivers/: local.rs  mod.rs  zfs.rs
xcd/src/volume/: mod.rs
xcd/src/volume/drivers/: local.rs  mod.rs  zfs.rs
