[package]
name = "freebsd"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
command-macros = "0.2.9"
ipcidr = { path = "../ipcidr" }
jail = "*"
nix = { version = "0.25.0", features = ["term", "process", "event"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "^1.21", features = ["process"], optional = true }
tracing = "0.1"
