[package]
name = "ocitar"
version = "0.0.1"
edition = "2021"

description = "Create and extract OCI layer archive"

[dev-dependencies]
serial_test = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
libc = "0.2"
log = "0.4.17"
stderrlog="0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10.6", features = ["asm"] }
thiserror = "1.0.31"
# compression
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
zstd = "0.11.2"
