[package]
name = "pty_process"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freebsd = { path = "../freebsd" }
futures = "0.3.25"
tokio = { version = "^1.21", features = ["net", "process", "macros", "sync"] }
