[package]
name = "xc-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xc-build"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ipc = { path = "../ipc" }
ipcidr = { path = "../ipcidr" }
freebsd = { path = "../freebsd" }
nix = { version = "0.25.0", features = ["term", "process", "event"] }
oci_util = { path = "../oci_util" }
pest = "2.6.0"
pest_derive = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
varutil = { path = "../varutil" }
xc = { path = "../xc" }
xcd = { path = "../xcd" }
