[package]
name = "xcd"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.67"
async-trait = "0.1.59"
clap = { version = "4", features = ["derive"] }
ipc = { path = "../ipc" }
ipc-macro = { path = "../ipc-macro" }
ipcidr = { path = "../ipcidr" }
freebsd = { path = "../freebsd" }
futures = "0.3.25"
pty_process = { path = "../pty_process" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "*"
sha2 = { version = "0.10.6", features = ["asm"] }
sysctl = "*"
thiserror = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "^1.21", features = ["full"] }
oci_util = { path = "../oci_util" }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
varutil = { path = "../varutil" }
xc = { path = "../xc" }
